# clients

./: .dockerignore  .gitignore  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  regression.txt  tsconfig.base.json  verify-publisher.js
.claude/: settings.local.json
.github/: CODEOWNERS  renovate.json5
.github/workflows/: alert-ddg-files-modified.yml  auto-branch-updater.yml  build-browser.yml  build-cli.yml  build-desktop.yml  build-web.yml  chromatic.yml  community-pr-management.yml  crowdin-pull.yml  deploy-web.yml  lint-crowdin-config.yml  lint.yml  locales-lint.yml  nx.yml  publish-cli.yml  publish-desktop.yml  publish-web.yml  release-browser.yml  release-cli.yml  release-desktop.yml  release-web.yml  repository-management.yml  sdk-breaking-change-check.yml  sdk-update.yml  test-browser-interactions.yml  test.yml  version-auto-bump.yml
.storybook/: main.ts
apps/browser/: CLAUDE.md  (+4 more)
apps/desktop/desktop_native/napi/: Cargo.toml  index.d.ts
apps/desktop/desktop_native/napi/src/: autofill.rs  autostart.rs  autotype.rs  biometrics.rs  biometrics_v2.rs  chromium_importer.rs  clipboards.rs  ipc.rs  lib.rs  passkey_authenticator.rs  passwords.rs  processisolations.rs  sshagent.rs  sshagent_v2.rs  windows_registry.rs
apps/desktop/desktop_native/ssh_agent/: Cargo.toml
apps/desktop/desktop_native/ssh_agent/src/: agent.rs  approval.rs  authorization.rs  lib.rs
apps/desktop/desktop_native/ssh_agent/src/server/: auth_policy.rs  connection.rs  mod.rs  peer_info.rs
apps/desktop/desktop_native/ssh_agent/src/server/listener/: mod.rs
apps/desktop/desktop_native/ssh_agent/src/storage/: keystore.rs
debian/: README.Debian  README.source  bitwarden-cli.lintian-overrides  bw.1  bw.bash-completion  bw.zsh-completion  changelog  control  copyright  rules  watch
scripts/: build-deb.sh
(+1671 files in other folders)
