[package]
name = "desktop_napi"
exclude = ["index.node"]
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
default = []
manual_test = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
autotype = { path = "../autotype" }
chromium_importer = { path = "../chromium_importer" }
desktop_core = { path = "../core" }
napi = { workspace = true, features = ["async", "anyhow"] }
napi-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ssh_agent = { path = "../ssh_agent" }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-registry = { workspace = true }
windows_plugin_authenticator = { path = "../windows_plugin_authenticator" }

[build-dependencies]
napi-build = { workspace = true }

[lints]
workspace = true
